change checkboxes to radio

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                                 <div class="time">
                                     <label class= "form-check-label">when do you intend to go ?</label>
                                     <div class="box">
-                                       <label class= "form-check-label">today</label> <input type="checkbox"> 
-                                       <label class= "form-check-label">tomorrow</label><input type="checkbox"> 
-                                      <label class= "form-check-label">this week</label><input type="checkbox"> 
-                                     <label class= "form-check-label">not sure but this year</label><input type="checkbox">
+                                       <label class= "form-check-label">today</label> <input type="radio"> 
+                                       <label class= "form-check-label">tomorrow</label><input type="radio"> 
+                                      <label class= "form-check-label">this week</label><input type="radio"> 
+                                     <label class= "form-check-label">not sure but this year</label><input type="radio">
 
 
                                         <button class="btn btn-group btn-primary">submit</button>
