modified the buttons in js

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <div class="image">
                           <button class="btn btn-group previous"> <i class="fas fa-chevron-left"></i></button>
                            <div class="imgText">
-                               <h1 class="text-center text-capitalize">discover greece</h1>
+                               <h1 class="text-center text-capitalize showCaseText">discover greece</h1>
                                <p class="text-center">travel with delightful experience</p>
                            </div>
                            <button class="btn btn-group next"> <i class="fas fa-chevron-right"></i></button>
